--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Ashraf Khan</title>
+  <title>About</title>
   
   <link rel="stylesheet" href="style.css">
 </head>
@@ -31,25 +31,10 @@
         <br>
     </section>
     <section class="content">
-        <div class="pic1"><img src="pic.png"></div>
-        <h1 class="im">
-            Hi I'm 
-            </h1>
-            <h1>
-            Ashraf
-        </h1>
-        
-        <p>
-            I'm working with
-<br>JavaScript, CSS, HTML, coding, <br>designing, interactivity, web <br>development, creativity.
-        </p>
-        <br>
-        <a href="https://www.facebook.com/theunknown.ak.786"><button class="btn-1">
-            Contact Me
-        </button>
-        </a>
+
     </section>
-    
-     <script src="script.js"></script>
+    <section class="coming">
+        <h1>Coming Soon...</h1>
+    </section>
   </body>
   </html>
