--- a/tik-tok.html
+++ b/tik-tok.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>Ashraf Khan</title>
+  <title>Tik-Tok Auto Clicker</title>
   
   <link rel="stylesheet" href="style.css">
 </head>
@@ -31,25 +31,18 @@
         <br>
     </section>
     <section class="content">
-        <div class="pic1"><img src="pic.png"></div>
-        <h1 class="im">
-            Hi I'm 
-            </h1>
-            <h1>
-            Ashraf
-        </h1>
-        
-        <p>
-            I'm working with
-<br>JavaScript, CSS, HTML, coding, <br>designing, interactivity, web <br>development, creativity.
-        </p>
-        <br>
-        <a href="https://www.facebook.com/theunknown.ak.786"><button class="btn-1">
-            Contact Me
-        </button>
-        </a>
+
     </section>
-    
-     <script src="script.js"></script>
+    <section class="tik-tok">
+        <h1>
+            Tik Tok Auto Clicker
+        </h1>
+        <img src="tiktok-logo.png">
+        <br>
+        <a href="https://play.google.com/store/apps/details?id=com.truedevelopersstudio.automatictap.autoclicker"><button>
+            Download Apk
+        </button></a>
+       <a href="https://apkadmin.com/jrf7kro2g0ns/DARK-ARMY.txt.html"> <button>Download File</button></a>
+    </section>
   </body>
   </html>
